<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PackageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/voi"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/internet"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/sms"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>

                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/one_birr"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_marginTop="27px"
                    android:layout_marginLeft="60px"
                    android:background="@drawable/btnbg"
                     />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/flx_pac"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/voice_data"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/unl_pre"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/long_run_pac"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="190sp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/daily"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
                <Button
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:text="@string/long_run_pac"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:layout_margin="60px"
                    android:background="@drawable/btnbg"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>