<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/ask"
                android:layout_width="370sp"
                android:layout_height="100sp"
                android:layout_marginLeft="30sp"
                android:textAlignment="textStart"
                android:text="@string/bal"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:paddingLeft="20sp"
                android:background="@drawable/btnbg"
                android:textSize="30sp"
                />
            <LinearLayout
                android:layout_width="370sp"
                android:layout_height="150sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:text="@string/bal"
                android:textColor="#fff"
                android:padding="20sp"
                android:background="@drawable/btnbg"
                android:orientation="vertical"
                android:textSize="40sp">
                <EditText
                    android:id="@+id/card_number"
                    android:layout_width="300sp"
                    android:layout_height="50sp"
                    android:hint="@string/enter_the_card_number"
                    android:textColor="#fff"
                    android:inputType="number"
                    android:textColorHint="#8A8989"
                    />
                <Button
                    android:id="@+id/recharge"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:text="@string/rec"
                    android:textColor="#fff"
                    android:background="@drawable/btnbg2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="370sp"
                android:layout_height="200sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="20sp"
                android:textAlignment="textStart"
                android:text="@string/bal"
                android:textColor="#fff"
                android:padding="20sp"
                android:background="@drawable/btnbg"
                android:orientation="vertical"
                android:textSize="40sp">
                <EditText
                    android:id="@+id/transfer_number"
                    android:layout_width="300sp"
                    android:layout_height="50sp"
                    android:hint="@string/enter_the_phone_number"
                    android:textColor="#fff"
                    android:inputType="phone"
                    android:textColorHint="#8A8989"
                    />
                <EditText
                    android:id="@+id/transfer_ammount"
                    android:layout_width="300sp"
                    android:layout_height="50sp"
                    android:hint="@string/enter_the_ammount"
                    android:textColor="#fff"
                    android:inputType="number"
                    android:textColorHint="#8A8989"
                    />
                <Button
                    android:id="@+id/transfer"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:text="@string/tra"
                    android:textColor="#fff"
                    android:background="@drawable/btnbg2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="370sp"
                android:layout_height="150sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="20sp"
                android:textAlignment="textStart"
                android:text="@string/bal"
                android:textColor="#fff"
                android:padding="20dp"
                android:background="@drawable/btnbg"
                android:orientation="vertical"
                android:textSize="40sp">
                <EditText
                    android:id="@+id/call_phone"
                    android:layout_width="300sp"
                    android:layout_height="50sp"
                    android:hint="@string/enter_the_ph_number"
                    android:textColor="#fff"
                    android:inputType="phone"
                    android:textColorHint="#8A8989"
                    />
                <Button
                    android:id="@+id/call_back"
                    android:layout_width="100sp"
                    android:layout_height="50sp"
                    android:text="@string/cmb"
                    android:textColor="#fff"
                    android:background="@drawable/btnbg2"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>